Bugfixes: async updates, error length handling on max, & text wrapping
Fix the following issues:
1. tweets were not loading in async so they would be sometimes delayed by an extra tweet (or more)
2. length check changed to by val() instead of .length to eliminate counting "name=" from serialize()
3. added text-wrapping for long messages

--- a/public/styles/tweetboxes.css
+++ b/public/styles/tweetboxes.css
@@ -6,6 +6,7 @@ article {
   padding: 1em;
   padding-bottom: 2em;
   border: 3px solid black;
+  overflow-wrap: break-word;
 }
 
 article:hover {
